BUGFIX: HeroImageBlock: btn-default text color is now visible

--- a/jetstream/static/jetstream/css/blocks/hero_image.less
+++ b/jetstream/static/jetstream/css/blocks/hero_image.less
@@ -98,7 +98,7 @@
           background-color: lighten(@orange, 10%);
         }
       }
-      .btn-default {
+      a.btn-default {
         background-color: @white;
         border: none;
         &:hover {
